<resources>
    <string name="app_name">IT-Амнезия</string>
    <string name="Profile">Profile</string>
    <string name="Welcome">Welcome!</string>
    <string name="CodeNoMatch">The codes don\'t match!</string>
    <string name="CreateCode">Enter access code</string>
    <string name="CreateAccountFirst">You need to create currency account first</string>
    <string name="RepeatCode">Repeat access code</string>
    <string name="EnterBank">Log in to mobile bank</string>
    <string name="EnterBankAsAdmin">Log in to mobile bank as Admin</string>
    <string name="EnterBankShort">Log in to bank</string>
    <string name="AuthByPhoneNumber">Open a deposit</string>
    <string name="Registration">Registration</string>
    <string name="Login">Login</string>
    <string name="RegisterAdmin">Registration for Sovcombank admins</string>
    <string name="Register">Registration for Sovcombank customers</string>
    <string name="RegisterDescription">Registration by phone number </string>
    <string name="EnterBankDescription">For Sovcombank customers and Halva card holders</string>
    <string name="Halva">Get a halva card</string>
    <string name="EmptyCode">Pin code is empty!</string>
    <string name="HalvaDescription">Submit an application and complete the registration of the installment card</string>
    <string name="GetCredit">Apply for a cash loan</string>
    <string name="GetCreditDescription">Cash loan with interest refund</string>
    <string name="OpenContribution">Open a deposit</string>
    <string name="OpenContributionDescription">Your benefit is up to 8.7% per annum</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="PlusSeven">+7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="ForgotCode">Forgot code</string>
    <string name="Support">Support</string>
    <string name="EnterNumber"> Enter phone number</string>
    <string name="EnterCredentials">Enter your credentials</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="EnterBirthDay">Choose Birthday</string>
    <string name="Date">Date</string>
    <string name="Surname">Surname</string>
    <string name="Amount">Amount</string>
    <string name="Name">Name</string>
    <string name="EnterName">Name is empty!</string>
    <string name="EnterPhone">Phone is empty!</string>
    <string name="EnterSurname">Surname is empty!</string>
    <string name="EnterLastName">Last name is empty!</string>
    <string name="LastName">Last Name</string>
    <string name="Password">Password</string>
    <string name="EnterCode">Enter code</string>
    <string name="EnterPassword">Enter password</string>
    <string name="PasswordsDontMatch">Passwords don\'t match!</string>
    <string name="resend_two_min">Resend confirmation code in:</string>
    <string name="ConfirmCodeAccountSent">Enter the code that was sent to your phone number to confirm your account</string>
    <string name="CheckCredentials">Please, check your credentials</string>
    <string name="SomethingWentWrong">Something went wrong…</string>
    <string name="Confirm">Confirm</string>
    <string name="CreateCurrencyAccount">Create new currency account</string>
    <string name="CreateAccount">Create new account</string>
    <string name="INVALID_CODE">Wrong code</string>
    <string name="RESEND_CODE">Resend sms-code</string>
    <string name="LogOut">Log out</string>
    <string name="RegistrationSuccess">You have successfully registered in!</string>
    <string name="AuthenticationSuccess">You have successfully authenticated!</string>
    <string name="AddMoneySuccess">You have successfully authenticated!</string>
    <string name="ConfirmPasswordEmpty">Confirm password is empty!</string>
    <string name="GoodMorning">Good morning, %1$s!</string>
    <string name="ExitConfirm">Do you want to exit the app?</string>
    <string name="Next">Next</string>
    <string name="GraphicsQuotations">Graph of changes in quotations</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Home">Home</string>
    <string name="Clients">Clients</string>
    <string name="Active">Active</string>
    <string name="Blocked">Blocked</string>
    <string name="Unlock">Unlock</string>
    <string name="BlockUser">Block</string>
    <string name="EnterPicode">Enter Pin Code</string>
    <string name="Cancel">Cancel</string>
    <string name="Currency">Currency</string>
    <string name="MyAccounts">My accounts</string>
    <string name="Deposit">Deposit</string>
    <string name="MakeDeposit">Make a deposit to the main account </string>
    <string name="Buy">Buy</string>
    <string name="WithDraw">WithDraw</string>
    <string name="WithDrawFromRuble">WithDraw money from ruble account</string>
    <string name="SellCurrency">Select the account from which you want to sell the currency. The sale amount will be credited to the main account</string>
    <string name="Sell">Sell</string>
    <string name="Prediction">Prediction</string>
    <string name="Statistics">Statistics</string>
    <string name="Prediction">Prediction</string>
    <string name="NotConfirmed">Not confirmed</string>
    <string name="Wait">Wait</string>
    <string name="WaitUntilConfirmation">Please, wait until admin confirms your registration</string>
    <string name="Default4Digits">2707</string>
    <string name="DefaultShortName">RUB</string>
    <string name="DefaultCost">62,44</string>
    <string name="DefaultCurrency">Рубль</string>
    <string name="Dollar">$</string>
    <string name="Euro">€</string>
    <string name="Ruble">₽</string>
    <string name="Sterling">£</string>
    <string name="Yuan">¥</string>
    <string name="RubleBill">ruble bill</string>
    <string name="Account">Account</string>
    <string name="OperationSuccess">Operation completed successfully!</string>
    <string name="DeleteMoneySuccess">Money has been successfully withdrawn from the account!</string>
    <string name="SellMoneySuccess">You have successfully sold the currency!</string>
    <string name="BuyMoneySuccess">You have successfully purchased a currency!</string>
    <string name="TypeTransaction">Transaction type</string>
    <string name="BuyCurrency"> Enter the amount to purchase the currency. Its cost will be debited from the main account</string>
    <string name="FromTime">From: </string>
    <string name="TillTime">Till: </string>
    <string name="From">From: </string>
    <string name="To">To: </string>
    <string name="Transaction">Transaction</string>
    <string name="Recharge">Recharge</string>
    <string name="Withdrawal">Withdrawal</string>
    <string name="History">History</string>
    <string name="FingerprintNotSupported">Fingerprint authentication not supported on the device</string>
    <string name="AuthFailed">Authentication Failed</string>
    <string name="NoFingerprintRegistered">No Fingerprint registered</string>
    <string name="FingerprintNotAvailableOnThisOS">Fingerprint feature is not available on this OS</string>
    <string name="All">All</string>
    <string name="HistoryOfOperations">History of operations</string>
    <string name="EmptyActiveClientList"> The list of active clients is empty</string>
    <string name="EmptyNotConfirmedClientList"> The waiting client list is empty</string>
    <string name="QuestionUnlockMessage">Are you sure that you want to unlock the client?</string>
    <string name="EmptyBlockedClientList">The list of blocked clients is empty</string>
    <string name="QuestionBlockedMessage">Are you sure that you want to block the client?</string>
</resources>