<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        app:cardBackgroundColor="@color/red"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="9sp">

        <TextView
            android:id="@+id/shortNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gteestiprotext_regular"
            android:text="@string/DefaultShortName"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nominalTextView"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/gteestiprotext_regular"
        android:gravity="center_horizontal"
        android:text="@string/One"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/currencyNameTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/gteestiprotext_regular"
        android:gravity="center_vertical"
        android:text="@string/DefaultCurrency"
        android:textColor="@color/black" />


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="14dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_vertical"
        >
        <TextView
            android:id="@+id/buyCurrencyTextViewBlue"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/rounded_button_shape"
            android:fontFamily="@font/gteestiprotext_regular"
            android:gravity="center"
            android:textSize="12sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/Buy"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/currencyCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/gteestiprotext_regular"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:text="@string/DefaultCost"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/rubleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:fontFamily="@font/gteestiprotext_regular"
        android:gravity="center"
        android:layout_marginStart="3dp"
        android:text="@string/Ruble"
        android:textColor="@color/black" />

</LinearLayout>