<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="9sp">

        <TextView
            android:id="@+id/shortСurrencyNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gteestiprotext_regular"
            android:text="@string/DefaultShortName"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accountSrcTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:fontFamily="@font/gteestiprotext_regular"
            android:text="@string/From"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/accountDestTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:fontFamily="@font/gteestiprotext_regular"
            android:text="@string/To"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/typeTransactionTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/gteestiprotext_regular"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:text="@string/TypeTransaction"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="end"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/currencyCostTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/gteestiprotext_regular"
            android:gravity="center"
            android:text="@string/DefaultCost"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/rubleTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:visibility="gone"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/gteestiprotext_regular"
            android:gravity="center"
            android:text="@string/Ruble"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>