<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:paddingTop="10dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="125dp"
        android:layout_height="75dp"
        app:cardCornerRadius="14sp"
        android:layout_marginStart="15dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gradient_background"
            />

        <TextView
            android:id="@+id/billLast4digits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/gteestiprotext_regular"
            android:text="@string/Default4Digits"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/accountBalanceTextView"
                android:text="@string/Default4Digits"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/gteestiprotext_regular"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/currencySymbolTextView"
                android:text="@string/Dollar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/gteestiprotext_regular"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/accountTypeTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Currency"
            android:visibility="gone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gteestiprotext_regular"
            android:background="@drawable/rounded_button_stroke"
            />

    </LinearLayout>

</LinearLayout>